Update Taskfile.build.yml to refine cleanup command for generated files
- Modified the cleanup command to remove only the wire_gen.go file instead of all *_wire_gen.go files, improving specificity in the build process.

--- a/Taskfile.build.yml
+++ b/Taskfile.build.yml
@@ -205,7 +205,7 @@ tasks:
     desc: Clean up generated files
     cmds:
     - rm -rf {{.BUILD_DIR}}
-    - rm -rf internal/application/container/*_wire_gen.go
+    - rm -rf internal/application/container/wire_gen.go
 
   all:
     desc: Build all platforms
