Refactor configuration and logging setup
- Updated `config.yaml` to use environment variables for database path and log file path, enhancing flexibility.
- Improved error handling and cleanup in `main.go` to ensure proper application shutdown.
- Refined logger initialization in `zap.go` to handle console output safely on Windows and added support for additional log levels.
- Ensured SQLite store directory is created if it doesn't exist, improving robustness in `store.go`.

--- a/config.yaml
+++ b/config.yaml
@@ -9,10 +9,9 @@ logger:
   console: true
   file: true
   file_path: "logs/godo.log"
-  output: ["stdout"]
 
 database:
-  path: "godo.db"
+  path: "$HOME/.config/godo/godo.db"
 
 ui:
   main_window:
