Update .goreleaser.yaml to use config.yaml instead of configs/*.yaml
- Changed the file reference in the archives section to specify config.yaml, improving clarity and ensuring the correct configuration file is included in the build process.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -48,7 +48,7 @@ archives:
   files:
   - LICENSE
   - README.md
-  - configs/*.yaml
+  - config.yaml
 
 - id: linux
   builds: [ linux ]
@@ -57,7 +57,7 @@ archives:
   files:
   - LICENSE
   - README.md
-  - configs/*.yaml
+  - config.yaml
 
 checksum:
   name_template: 'checksums.txt'
