Refactor application to transition from task management to note management
- Updated FyneApp.toml and README.md to reflect the change from a todo application to a note application.
- Refactored internal application structure, including service, repository, and storage layers, to support note management instead of task management.
- Modified API handlers and GUI components to handle notes, including CRUD operations and UI updates.
- Removed task-related models, services, and storage implementations, replacing them with note equivalents.
- Adjusted error handling and validation logic to align with the new note management functionality.

--- a/FyneApp.toml
+++ b/FyneApp.toml
@@ -18,7 +18,7 @@ Website = "https://github.com/jonesrussell/godo"
   HelperText = "Release build without debug symbols"
 
 [LinuxAndBSD]
-  GenericName = "Todo Application"
+  GenericName = "Note Application"
   Categories = ["Utility", "Office"]
-  Comment = "Quick-note and todo management application"
-  Keywords = ["todo", "notes", "tasks", "productivity"]
+  Comment = "Quick-note and note management application"
+  Keywords = ["notes", "productivity", "quick-note"]
